--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .rainbow {
-  background: linear-gradient(90deg, #ff0000, #ff8700, #ffd300, #deff0a, #a1ff0a, #0aff99, #0aefff, #147df5, #580aff, #be0aff, #ff0000); /*rainbow text animation*/
+  background: linear-gradient(90deg, #ff00ff, #ff0000, #00ff00, #00ffff); /*rainbow text animation*/
   -webkit-text-fill-color: #F000;
   -webkit-background-clip: text;
   -webkit-animation: animated_background 100s linear infinite;
